--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,2 +1,201 @@
 
 /* css */
+
+body {
+    display: block;
+}
+div {
+    color: rgb(106, 106, 106);
+    display: block;
+    /* Why can't we put a div parameter for position? */
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+/*Head*/
+.l1 {
+    position: absolute;
+    top: 50px;
+    left: 690px;
+}
+.l2 {
+    position: absolute;
+    top: 70px;
+    left: 670px;
+}
+.l3 {
+    position: absolute;
+    top: 90px;
+    left: 680px;
+}
+.l4 {
+    position: absolute;
+    top: 110px;
+    left: 690px;
+}
+
+/*Torso and arms*/
+.l5 {
+    position: absolute;
+    top: 140px;
+    left: 670px;
+}
+.l6 {
+    position: absolute;
+    top: 160px;
+    left: 665px;
+}
+.l7a { 
+    position: absolute;
+    top: 180px;
+    left: 660px;
+}
+.l7b { /*Boat inline to torso on line 7*/
+    position: absolute;
+    top: 180px;
+    left: 1005px;
+}
+.l8a { /*Boat inline to torso on line 8*/
+    position: absolute;
+    top: 200px;
+    left: 420px;
+}
+.l8b {
+    position: absolute;
+    top: 200px;
+    left: 655px;
+}
+.l8c { /*Boat inline to torso on line 8*/
+    position: absolute;
+    top: 200px;
+    left: 1000px;
+}
+.l9a { /*Boat inline to torso on line 9*/
+    position: absolute;
+    top: 220px;
+    left: 415px;    
+}
+.l9b {
+    position: absolute;
+    top: 220px;
+    left: 650px; 
+}
+.l9c { /*Boat inline to torso on line 9*/
+    position: absolute;
+    top: 220px;
+    left: 900px;
+}
+
+/*Boat*/
+.l10a {
+    position: absolute;
+    top: 240px;
+    left: 410px; 
+}
+.l10b {
+    position: absolute;
+    top: 240px;
+    left: 860px; 
+}
+.l11a {
+    position: absolute;
+    top: 260px;
+    left: 415px; 
+}
+.l11b {
+    position: absolute;
+    top: 260px;
+    left: 840px;
+}
+.l12a {
+    position: absolute;
+    top: 280px;
+    left: 420px; 
+}
+.l12b {
+    position: absolute;
+    top: 280px;
+    left: 820px; 
+}
+.l13a {
+    position: absolute;
+    top: 300px;
+    left: 425px;
+}
+.l13b {
+    position: absolute;
+    top: 300px;
+    left: 800px;
+}
+.l14a {
+    position: absolute;
+    top: 320px;
+    left: 435px;
+}
+.l14b {
+    position: absolute;
+    top: 320px;
+    left: 780px;
+}
+.l15a {
+    position: absolute;
+    top: 340px;
+    left: 150px;
+}
+.l15b {
+    position: absolute;
+    top: 340px;
+    left: 750px;
+}
+.l16 {
+    position: absolute;
+    top: 360px;
+    left: 100px;
+}
+
+/* Title */
+.t1 {
+    transform: translate(560px, 20px) rotate(-50deg);
+    width: 750px;
+    height: 30px;
+}
+.t2 {
+    transform: translate(570px, 0px) rotate(-50deg);
+    width: 750px;
+    height: 0px;
+}
+.t3 {
+    transform: translate(650px, 5px) rotate(-50deg);
+    width: 600px;
+    height: 0px;
+}
+.t4 {
+    transform: translate(760px, -125px) rotate(-50deg);
+    width: 600px;
+    height: 0px;
+}
+
+
+/* Cosmetics */
+/* .torso {
+    color: rgb(35, 129, 97);
+}
+.boat {
+    color: red;
+}*/
+.water {
+    color: rgb(0, 102, 255);
+}
+.title {
+    color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    font-size: larger;
+}
+.author {
+    color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    font-size: 15;
+}
+
